added warning statement

--- a/assay/README
+++ b/assay/README
@@ -1,5 +1,12 @@
 The purpose of this software is to give users the ability to test the effectiveness of their WAF solution(s).
 
+****************************************************************************************************************************
+**** WARNING: if any of the malware makes it up into your web server via assay DO NOT forget to clean those files up!!! ****
+**** PELIGRO: if you forget to clean these files up you may have a gaping hole in your infrastructure. 			****
+**** ACHTUNG: best practice is to put DVWA on a VM and isolate it from critical resources on your network. 		****
+**** CONSCIA: but you should clean up the malware/backdoor files either way (if they get to the web server)		****
+****************************************************************************************************************************
+
 Use Case/Scenario:
 
 The version of DVWA included is set to its lowest security setting. So it represents a very insecure web application.
@@ -100,5 +107,12 @@ Steps:
 	The run statement for this step is:
 	
 		python assay.py -s 1
+
+****************************************************************************************************************************
+**** WARNING: if any of the malware makes it up into your web server via assay DO NOT forget to clean those files up!!! ****
+**** PELIGRO: if you forget to clean these files up you may have a gaping hole in your infrastructure. 			****
+**** ACHTUNG: best practice is to put DVWA on a VM and isolate it from critical resources on your network. 		****
+**** CONSCIA: but you should clean up the malware/backdoor files either way (if they get to the web server)		****
+****************************************************************************************************************************
 
 
